ingress-serverstransport/conf/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik-ingress
spec:
  controller: traefik.io/ingress-controller

#---
#kind: Ingress
#apiVersion: networking.k8s.io/v1beta1
#metadata:
#  name: networking
#  annotations:
#    traefik.ingress.kubernetes.io/router.tls: "true"
#
#spec:
#  ingressClassName: traefik-ingress
#  rules:
#    - host: whoami
#      http:
#        paths:
#          - path: /net/bar
#            backend:
#              serviceName: whoami
#              servicePort: 80
#          - path: /net/foo
#            backend:
#              serviceName: whoami
#              servicePort: 80
#  tls:
#    - secretName: whoami-cert

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
#    traefik.ingress.kubernetes.io/router.tls: "true"


spec:
  ingressClassName: traefik-ingress
  rules:
    - host: whoami
      http:
        paths:
          - path: /net/bar
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
#          - path: /net/foo
#            pathType: Exact
#            backend:
#              service:
#                name: whoami
#                port:
#                  number: 80
#  tls:
#    - secretName: whoami-cert

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: networkingtls
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serverstransport: mst@file


spec:
  ingressClassName: traefik-ingress
  rules:
    - host: whoami
      http:
        paths:
#          - path: /net/bar
#            pathType: Exact
#            backend:
#              service:
#                name: whoami
#                port:
#                  number: 80
          - path: /net/foo
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
  tls:
    - secretName: whoami-cert
